// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`after_export.js 1`] = `
====================================options=====================================
parsers: ["babel"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
export @decorator class Foo {}

export default @decorator class {}

=====================================output=====================================
export
@decorator
class Foo {}

export default
@decorator
class {}

================================================================================
`;

exports[`before_export.js 1`] = `
====================================options=====================================
parsers: ["babel"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
@decorator
export class Foo {}

@decorator
export default class {}

=====================================output=====================================
@decorator
export class Foo {}

@decorator
export default class {}

================================================================================
`;
